Users can now sign up with a province, name and a email with devise

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,10 @@
     <%= f.email_field :email, autocomplete: "email" %>
   </div>
 
+  <div class="field">
+    <%= f.label :province_id, "Province" %><br />
+    <%= f.collection_select :province_id, Province.all, :id, :name, prompt: "Select your province" %>
+  </div>
 
   <div class="field">
     <%= f.label :password %>
