--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <div class="hidden w-full md:block md:w-auto" id="navbar-default">
           <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
             <li>
-              <a href="/" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+              <a href="/" class="block py-2 px-3 text-gray-900 rounded  md:bg-transparent md:text-gray-900 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
             </li>
             <li>
               <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
@@ -32,11 +32,14 @@
 
             <% if user_signed_in? %>
                 <li>
-                    <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Log out</a>
+                  <%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
                 </li>
             <% else %>
                 <li>
                     <%= link_to "Sign Up", new_user_registration_path, class: "bg-sky-500 hover:bg-sky-700"%>                
+                </li>
+                <li>
+                    <%= link_to "Sign In", new_user_session_path, class: "bg-sky-500 hover:bg-sky-700"%>                
                 </li>
             <% end %>
           </ul>
@@ -45,7 +48,7 @@
     </nav>
     <!-- Flash message-->
     <% flash.each do |name, message|%>
-      <%= content_tag(:dev,message, class: "alert alert-info #{name}")%>
+      <%= content_tag(:div, message, class: "p-4 mb-4 bg-blue-100 text-blue-800 rounded #{name}") %>
     <% end %>
     <main class="">
       <%= yield %>
