--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,10 +27,9 @@
             <% if user_signed_in? %>
               <li class="flex space-x-2">
                 <%= link_to "User Settings", edit_user_registration_path, class: "py-1 px-2 rounded bg-blue-500 text-white text-sm hover:bg-blue-700" %>
-                <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: "py-1 px-2 rounded bg-red-500 text-white text-sm hover:bg-red-700" %>              </li>
-              <li>
-                
+                <%= link_to 'Sign Out', destroy_user_session_path,  data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "py-1 px-2 rounded bg-red-500 text-white text-sm hover:bg-red-700" %>
               </li>
+             
             <% else %>
               <li>
                 <%= link_to "Sign Up", new_user_registration_path, class: "py-2 px-3 rounded bg-blue-500 text-white hover:bg-blue-700" %>
@@ -50,7 +49,7 @@
         </div>
       </div>
     </nav>
-    <div class="max-w-screen-xl mx-auto mt-4 p-4 bg-white dark:bg-gray-800 rounded-lg shadow-lg">
+    <div class="max-w-screen-xl mx-auto mt-4 p-4">
       <!-- Flash message -->
       <% flash.each do |name, message| %>
         <%= content_tag(:div, message, class: "p-4 mb-4 bg-blue-100 text-blue-800 rounded #{name}") %>
