--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,28 @@
+<h1 class="text-2xl font-bold mb-4">Welcome to Your Application</h1>
 
-<div class="mx-auto max-w-screen-xl p-4">
-    <% if user_signed_in? %>
-            <p>You are Signed in</p>
-    <% else %>
-            <p>You are not Signed in Right now</p>
-    <% end %>
-</div>
+<%= form_with url: redirect_path, method: :post, local: true do |form| %>
+  <div class="flex items-center space-x-4">
+    <div class="flex-1">
+      <%= form.label :category_id, "Choose a category:", class: "block text-sm font-medium text-gray-700" %>
+      <%= form.select :category_id, options_from_collection_for_select(@categories, :id, :name, @selected_category_id), { prompt: "Select a category" }, class: "block w-full mt-1 p-2 border border-gray-300 rounded-md shadow-sm bg-white dark:bg-gray-700 dark:border-gray-600 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm" %>
+      
+    </div>
+    <div>
+        <%= form.submit "Filter", class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-700 mt-6"%>
+    </div>
+  </div>
+<% end %>
+
+<% if @selected_category %>
+  <div class="mb-4">
+    <h2 class="text-xl font-bold">Selected Category: <%= @selected_category.name %></h2>
+  </div>
+  <div>
+    <h3 class="text-lg font-bold mb-2">Products:</h3>
+    <ul class="list-disc list-inside">
+      <% @selected_category.products.each do |product| %>
+        <li><%= product.name %> - <%= number_to_currency(product.price) %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
