--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <% if user_signed_in? %>
               <li class="flex space-x-2">
                 <%= link_to "User Settings", edit_user_registration_path, class: "py-1 px-2 rounded bg-blue-500 text-white text-sm hover:bg-blue-700" %>
-                <%= link_to 'Sign Out', destroy_user_session_path,  data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "py-1 px-2 rounded bg-red-500 text-white text-sm hover:bg-red-700" %>
+                <%= link_to 'Sign Out', destroy_user_session_path, data: {turbo_method: :delete}, class: "py-1 px-2 rounded bg-red-500 text-white text-sm hover:bg-red-700" %>
               </li>
              
             <% else %>
