Added a way to add caregories by admin dashboard

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,7 +19,7 @@
     </div>
   <% end %>
 </div>
-
+ <%= paginate @products %>
 <%= render partial: 'products/prducts' %>
 
  <%= paginate @products %>
