--- a/app/views/products/_prducts.html.erb
+++ b/app/views/products/_prducts.html.erb
@@ -3,7 +3,7 @@
     <% @products.each do |product| %>
       <div class="p-4 mb-4 bg-white dark:bg-gray-700 rounded shadow-md flex flex-col justify-between">
         <%= link_to product.name, product_path(product) %>
-       <%#  <%= link_to 'add to cart', add_to_cart_path(product.id), data: { turbo_method: :post }, class: 'text-blue-500 self-end mt-2' %>
+       <%= link_to 'add to cart', add_to_cart_path(product.id), data: { turbo_method: :post }, class: 'text-blue-500 self-end mt-2' %>
       </div>
 
 
