--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,7 @@
             <li>
               <a href="/products" class="py-2 px-3 rounded hover:bg-gray-100 dark:hover:bg-gray-800">Products</a>
             </li>
-            <li>
-              <a href="#" class="py-2 px-3 rounded hover:bg-gray-100 dark:hover:bg-gray-800">Services</a>
-            </li>
+            <li><%= link_to 'My Cart', cart_path, class: "py-2 px-3 rounded hover:bg-gray-100 dark:hover:bg-gray-800"%></li>
             <% if user_signed_in? %>
               <li class="flex space-x-2">
                 <%= link_to "User Settings", edit_user_registration_path, class: "py-1 px-2 rounded bg-blue-500 text-white text-sm hover:bg-blue-700" %>
