Added a checkout process

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -36,7 +36,7 @@
     </table>
   </div>
   <p class="mt-4 text-xl">Total: <%= number_to_currency(@cart_items.sum { |item| item[:product] && item[:quantity] ? item[:product].price * item[:quantity] : 0 }) %></p>
-  <%# <%= link_to 'Confirm Order', confirm_order_cart_path, class: "mt-4 bg-blue-500 text-white px-6 py-2 rounded" %>
+  <%= link_to 'Confirm Order', confirm_order_cart_path, class: "mt-4 bg-blue-500 text-white px-6 py-2 rounded" %>
 
 <% else %>
   <p class="text-lg">Your cart is empty.</p>
