Adding order history

--- a/app/views/carts/confirm_order.html.erb
+++ b/app/views/carts/confirm_order.html.erb
@@ -16,8 +16,8 @@
         <tr class="bg-gray-100 border-b">
           <td class="py-2 px-4 text-center"><%= item.product.name %></td>
           <td class="py-2 px-4 text-center"><%= number_to_currency(item.product.price) %></td>
-          <td class="py-2 px-4 text-center"><%= item.quantity %></td> <!-- Align quantity center -->
-          <td class="py-2 px-4 text-center"><%= number_to_currency(item.product.price * item.quantity) %></td> <!-- Align total right -->
+          <td class="py-2 px-4 text-center"><%= item.quantity %></td>
+          <td class="py-2 px-4 text-center"><%= number_to_currency(item.product.price * item.quantity) %></td>
         </tr>
       <% end %>
     </tbody>
