--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,12 @@
             <li>
               <a href="/products" class="py-2 px-3 rounded hover:bg-gray-100 dark:hover:bg-gray-800">Products</a>
             </li>
-            <li><%= link_to 'My Cart', cart_path, class: "py-2 px-3 rounded hover:bg-gray-100 dark:hover:bg-gray-800"%></li>
+            <li>
+              <%= link_to 'My Cart', cart_path, class: "py-2 px-3 rounded hover:bg-gray-100 dark:hover:bg-gray-800"%>
+            </li>
+            <li>
+              <%= link_to 'My Orders', orders_path, class: "bg-blue-500 text-white px-4 py-2 rounded" %>
+            </li>
             <% if user_signed_in? %>
               <li class="flex space-x-2">
                 <%= link_to "User Settings", edit_user_registration_path, class: "py-1 px-2 rounded bg-blue-500 text-white text-sm hover:bg-blue-700" %>
