--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,13 +1,17 @@
 <!-- app/views/orders/index.html.erb -->
 
-<h1 class="text-3xl font-bold mb-4">Orders for <%= @user.email %></h1>
+<h1 class="text-3xl font-bold mb-4">Orders for <%= @user.name %></h1>
 
 <% @orders.each do |order| %>
-  <div class="border p-4 mb-4  bg-white dark:bg-gray-700 rounded shadow-md">
-    <h3 class="text-xl font-bold mb-2">Order #<%= order.id %></h3>
-    <p class="text-gray-600">Order Date: <%= order.created_at.strftime("%B %d, %Y %I:%M:%S:%p ") %></p>
+  <div class="border p-4 mb-4 bg-white dark:bg-gray-700 rounded shadow-md hover:bg-gray-100 transition-colors duration-300">
+    <%# <h3 class="text-xl font-bold mb-2">Order #<%= order.id</h3> %>
+    <p class="text-gray-600 text-xl  font-bold">Order Date: <%= order.created_at.strftime("%B %d, %Y %I:%M:%S %p") %></p>
     <ul class="mt-2">
+      <% total_price = 0.0 %>
+
       <% order.ordered_items.each do |item| %>
+        <% total_price += item.total_price.to_f %>
+
         <li class="border-t py-2">
           <div class="flex justify-between">
             <div>
@@ -16,14 +20,35 @@
               <p>Item Price: <%= number_to_currency(item.item_price) %></p>
               <p>Total Price: <%= number_to_currency(item.total_price) %></p>
             </div>
-            <div>
-              <p>HST: <%= item.hst %>%</p>
-              <p>PST: <%= item.pst %>%</p>
-              <p>GST: <%= item.gst %>%</p>
-            </div>
           </div>
         </li>
       <% end %>
+
+      <li class="border-t py-2">
+        <div class="flex justify-between">
+          <div class="font-bold">
+            Total for all items:
+          </div>
+          <div class="text-gray-600">
+            Total Price: <%= number_to_currency(total_price) %>
+          </div>
+        </div>
+
+        <% first_item = order.ordered_items.first %>
+        <% if first_item.present? %>
+          <div class="flex justify-between mt-2">
+            <div class="font-bold">
+              Tax Details:
+            </div>
+            <div class="text-gray-600">
+              HST: <%= first_item.hst %> %<br>
+              PST: <%= first_item.pst %> %<br>
+              GST: <%= first_item.gst %> %
+            </div>
+          </div>
+
+        <% end %>
+      </li>
     </ul>
   </div>
 <% end %>
