--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,20 +1,32 @@
-
-  <div>
+<div class="p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md dark:hover:bg-gray-700 transition duration-300 flex flex-col md:flex-row">
+  <div class="md:w-2/3 md:pr-4">
     <h1 class="text-3xl font-bold mb-4 text-gray-900 dark:text-white"><%= @product.name %></h1>
     <p class="text-gray-700 dark:text-gray-300 mb-4"><%= @product.description %></p>
+
     <div class="mb-4">
       <span class="block text-lg font-semibold text-gray-900 dark:text-white">Price:</span>
       <span class="text-gray-700 dark:text-gray-300"><%= number_to_currency(@product.price) %></span>
     </div>
+
     <div class="mb-4">
       <span class="block text-lg font-semibold text-gray-900 dark:text-white">Stock Quantity:</span>
       <span class="text-gray-700 dark:text-gray-300"><%= @product.stock_quantity %></span>
     </div>
+
     <div class="mb-4">
       <span class="block text-lg font-semibold text-gray-900 dark:text-white">Category:</span>
       <span class="text-gray-700 dark:text-gray-300"><%= @product.category.name %></span>
     </div>
-
-
   </div>
 
+  <div class="md:w-1/3 flex flex-col items-center">
+    <% if @product.image.present? %>
+      <div class="w-80 h-80 overflow-hidden mb-4">
+        <%= image_tag(@product.image, class: "w-full h-full object-cover") %>
+      </div>
+    <% else %>
+      <p class="text-center text-gray-700 dark:text-gray-300 mb-4">No image</p>
+    <% end %>
+    <%= link_to 'Add to cart', add_to_cart_path(@product.id), data: { turbo_method: :post }, class: 'block bg-blue-500 text-white text-center py-2 px-4 hover:bg-blue-700' %>
+  </div>
+</div>
