--- a/app/views/products/_prducts.html.erb
+++ b/app/views/products/_prducts.html.erb
@@ -8,7 +8,7 @@
 
             <div class="mb-2">
               <% if product.image.present? %>
-                <%= image_tag(product.image, class: "w-full h-48 object-cover") %>
+                <%= image_tag(product.image, class: "w-full object-cover md:h-48 sm:h-40 xs:h-32", alt: product.name) %>
               <% else %>
                 <p class="text-center">No image</p>
               <% end %>
