--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,7 +21,7 @@
 
   <div class="md:w-1/3 flex flex-col items-center">
     <% if @product.image.present? %>
-      <div class="w-80 h-80 overflow-hidden mb-4">
+      <div class="w-80 md:w-64 sm:w-48 h-80 md:h-64 sm:h-48 overflow-hidden mb-4">
         <%= image_tag(@product.image, class: "w-full h-full object-cover") %>
       </div>
     <% else %>
